syntax = "proto3";
package serverpb;

import "google/api/annotations.proto";

message NodeMeta {
  string id = 1;
  string public_key = 2;
  repeated string addrs = 3;
  string cert = 4;
  int64 updated = 5;
  string signature = 6;
}

message NodeConfig {
  string path = 1;
  int32 max_peers = 2;
}

message HelloRequest {
  NodeMeta meta = 1;
}

message HelloResponse {
  NodeMeta meta = 1;
  repeated NodeMeta connected_peers = 2;
  repeated NodeMeta known_peers = 3;
}

message HeartBeatRequest {}
message HeartBeatResponse {}

message MetaRequest {}

message GetRemoteReferenceRequest {
  string reference_id = 1;
  int32 num_hops = 2;
}

message GetRemoteReferenceResponse {
  bytes reference = 1;
}

message SubscribeRequest {
  string channel_id = 1;
  int64 starting = 2;
  int32 num_hops = 3;
}

message Message {
  string message = 1;
  string public_key = 2;
  string signature = 3;
  int64 timestamp = 4;
}

service Node {
  rpc Hello(HelloRequest) returns (HelloResponse) {}
  rpc HeartBeat(HeartBeatRequest) returns (HeartBeatResponse) {}
  rpc Meta(MetaRequest) returns (NodeMeta) {}
  rpc GetRemoteFile(GetRemoteFileRequest) returns (GetRemoteFileResponse) {}
  rpc GetRoutingTable(RoutingTable) returns (RoutingTable) {}
  rpc GetRemoteReference(GetRemoteReferenceRequest) returns (GetRemoteReferenceResponse) {}
  rpc Subscribe(SubscribeRequest) returns (stream Message) {}
}

message Document {
  bytes data = 1;
  string content_type = 2;
  map<string, string> children = 3;
}

message Reference {
  string value = 1;
  string public_key = 2;
  string signature = 3;
  int64 timestamp = 4;
}

message GetRequest {
  string access_id = 1; // hash of document
}

message GetResponse {
  Document document = 1;
}

message AddRequest {
  Document document = 1;
}

message AddResponse {
  string access_id = 1;
}

message AddDirectoryRequest{
  Document document = 1;
}

message AddDirectoryResponse{}

message GetPeersRequest {}

message GetPeersResponse {
  repeated NodeMeta peers = 1;
}

message AddPeerRequest {
  string addr = 1;
}

message AddPeerResponse {}

message GetReferenceRequest {
  string reference_id = 1;
}

message GetReferenceResponse {
  Reference reference = 1;
}

message AddReferenceRequest {
  bytes priv_key = 1;
  string record = 2;
}

message AddReferenceResponse {
  string reference_id = 1;
}

service Client {
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/v1/document/{access_id}"
    };
  }
  rpc Add(AddRequest) returns (AddResponse) {
    option (google.api.http) = {
      post: "/v1/document"
      body: "*"
    };
  }
  rpc AddDirectory(AddDirectoryRequest) returns (AddDirectoryResponse) {}
  rpc GetPeers(GetPeersRequest) returns (GetPeersResponse) {
		option (google.api.http) = {
			get: "/v1/peers"
		};
  }
  rpc AddPeer(AddPeerRequest) returns (AddPeerResponse) {
    option (google.api.http) = {
      post: "/v1/peers"
      body: "*"
    };
  }
  rpc GetReference(GetReferenceRequest) returns (GetReferenceResponse) {
		option (google.api.http) = {
			get: "/v1/reference/{reference_id}"
		};
  }
  rpc AddReference(AddReferenceRequest) returns (AddReferenceResponse) {
    option (google.api.http) = {
      post: "/v1/reference"
      body: "*"
    };
  }
  rpc Publish(PublishRequest) returns (PublishResponse) {
    option (google.api.http) = {
      post: "/v1/publish"
      body: "*"
    };
  }
  rpc SubscribeClient(SubscribeRequest) returns (stream Message) {}
}
  // ipfs get <hash>
  // ipfs add <file>
  // ipfs peers

message PublishRequest {
  bytes priv_key = 1;
  string message = 2;
}

message PublishResponse {
  int32 listeners = 1;
}

message RoutingTable {
  repeated BloomFilter filters = 1;
}

message BloomFilter {
  bytes data = 1;
}

message GetRemoteFileRequest {
  int32 num_hops = 1;
  string document_id = 2;
}

message GetRemoteFileResponse {
  bytes body = 1;
}
